--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -757,3 +757,25 @@
   year={2009},
   publisher={Oxford Univ Press}
 }
+
+@article{yoon2012cell,
+  title={Cell cycle regulation by the intrinsically disordered proteins p21 and p27},
+  author={Yoon, Mi-Kyung and Mitrea, Diana M and Ou, Li and Kriwacki, Richard W},
+  journal={Biochemical Society Transactions},
+  volume={40},
+  number={5},
+  pages={981--988},
+  year={2012},
+  publisher={Portland Press Limited}
+}
+
+@article{ozenne2012flexible,
+  title={Flexible-meccano: a tool for the generation of explicit ensemble descriptions of intrinsically disordered proteins and their associated experimental observables},
+  author={Ozenne, Val{\'e}ry and Bauer, Fr{\'e}d{\'e}ric and Salmon, Lo{\"\i}c and Huang, Jie-rong and Jensen, Malene Ringkj{\o}bing and Segard, St{\'e}phane and Bernad{\'o}, Pau and Charavay, C{\'e}line and Blackledge, Martin},
+  journal={Bioinformatics},
+  volume={28},
+  number={11},
+  pages={1463--1470},
+  year={2012},
+  publisher={Oxford Univ Press}
+}
