--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -84,7 +84,7 @@
 \Dedication%
 
 \SetAcknowledgeName{\MakeUppercase{Acknowledgements}}%
-\SetAcknowledgeText{I give my sincere thanks to my supervisor Dr. Jackie Vogel for her support and mentorship throughout my Master's, and for sharing with me her passion for the complexity of life. I thank my colleagues in the Vogel lab for their friendship, guidance and useful discussions. I would also like to acknowledge the generous financial support from the Cellular Dynamics of Mollecular Complexes fellowship and Dr. Vogel's grants from the	Canadian Institutes for	Health Research and the National Institutes of Health. I thank the Guillimin support team for their invaluable technical help in working with the Calcul Qu\'ebec compute clusters. I would like to thank Roman Sarrazin Gendron for editing the French abstract. I also thank Vladimir Reinharz for his kind help with computational problems, and for all the enriching discussions.
+\SetAcknowledgeText{I give my sincere thanks to my supervisor Dr. Jackie Vogel for her support and mentorship throughout my Master's, and for sharing with me her passion for understanding the complexity of life. I thank my colleagues in the Vogel lab for their friendship, guidance and useful discussions. I would also like to acknowledge the generous financial support from the Cellular Dynamics of Mollecular Complexes fellowship and Dr. Vogel's grants from the	Canadian Institutes for	Health Research and the National Institutes of Health. I thank the Guillimin support team for their invaluable technical help in working with the Calcul Qu\'ebec compute clusters. I would like to thank Roman Sarrazin Gendron for editing the French abstract. I also thank Vladimir Reinharz for his kind help with computational problems, and for all the enriching discussions.
 	\newline \indent  I would like to express my deepest gratitude to all those whom I am so fortunate to call my friends and loved ones. To my brother, whose friendship means everything. To my father for his care and support. And to my mother; for being there for me every day, in every way; for being my role model, and my best friend.}%
 \Acknowledge%
 
