donecd Masters-Thesis

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -18,9 +18,9 @@ In this work we use MD simulations of both \gct forms to gain further insight in
 Molecular Dynamics simulations (MDS) on WT and Y11D \gct were carried out using MPI-enabled GROMACS 4.6.6 software\cite{hess2008gromacs} and a CentOS 5 high performance computational cluster. Calculations were distributed over 64 Dual Sandy Bridge 8-core, 2.6 GHz computing nodes and run under periodic boundary conditions with the OPLS-AA (Optimized Potential for Liquid Simulations All Atom) force field ~\cite{kaminski2001evaluation}.  The starting \gct polypeptide configurations were obtained from secondary and tertiary structure predictions by RaptorX \cite{kallberg2012template} and solvated using the SPCE (extended single point charge) water model in a dodecahedral box while enforcing a minimum distance between the edge of the box and solute of 1 nanometer. The total charge of the system was neutralized by adding sodium ions to the solution. Energy minimization was carried out using a steepest descent algorithm for a maximum of 50,000 steps until a maximum force of 100 kJ/mol between atoms was achieved. A 1 nm cut-off was used for non-bonded interactions, and long-range electrostatics were calculated using a Particle Mesh Edwald Sum algorithm. The systems equilibrated under the constant NVT and NPT ensembles (288K and 1 atm) for 5 ns before the production 2 $\mu$s simulations. Post-processing of all trajectories was done using the \texttt{trjconv} module of GROMACS. Theoretical random-coil structural ensembles (10,000 conformers) were calculated based on the \gct primary amino acid sequence using Flexible Meccano software \cite{ozenne2012flexible}. Translational diffusion coefficients were calculated for each structure using hydroNMR software \cite{de2000hydronmr}. 
 
 
-\section{Conformational sampling of \gct isoforms}
+\section{Conformational sampling of \gct}
 
-We computed atomic trajectories for the WT and YD forms of the \gct in all-atom MD simulations with durations of \SI{2}{\us}. We choose this simulation length because timescale of transitions observed in NMR are on the micro-millisecond order. While our nano-microsecond MD simulations do not reach such timescales due to computational limitations, long timescale motions measured in NMR have been reproduced in shorter timescale MD simulations but with faster exchange rates ~/cite{massi2004nmr, stafford2015conformational, henzler2007dynamic}. From the resulting trajectories we are able to capture dynamics and conformational sampling that are remarkably consistent with those measured in NMR.\\
+We computed atomic trajectories for the WT and YD forms of the \gct in all-atom MD simulations with durations of \SI{2}{\us}. We choose this simulation length because timescale of transitions observed in NMR are on the micro-millisecond order. While our nano-microsecond MD simulations do not reach such timescales due to computational limitations, long timescale motions measured in NMR have been reproduced in shorter timescale MD simulations but with faster exchange rates ~\cite{massi2004nmr, stafford2015conformational, henzler2007dynamic}. From the resulting trajectories we are able to capture dynamics and conformational sampling that are remarkably consistent with those measured in NMR.\\
 
 
 {\it \gct does not adopt any stable secondary structure}
@@ -68,6 +68,8 @@ Translational diffusion coefficient measurements in NMR report that both \gct fo
 
 Although both forms of the \gct primarily occupy collapsed and disordered conformations, we do observe that, as in NMR, the YD \gct has a slightly lower mean \diffusion than WT. From NMR we hypothesize that this is caused by transitions between compacted and extended driven by enhanced dynamics in the YD mutant. Lending support to this hypothesis, we show that we are able to explain the distribution of diffusion coefficients in the YD mutant as the sum of two gaussian distributions with parameters $\mu_1 =\SI{1.24e-6}{\dcunits}, \sigma_2= \num{2.34e-8}, \mu_2 =\SI{1.18e-6}{\dcunits}, \sigma_2= \num{2.21e-8}$ \figref{fig:dchistyd}. This suggests that the YD dynamics likely give rise to a two-state system where a minor state occupies extended conformations \figref{fig:dclines}. Meanwhile, the WT \diffusion distribution is best explained by a single normal distribution which suggests that the peptide occupies a single stable state which corresponds to the compacted portion of conformation space \figref{fig:dchistwt}.
 
+
+
 \begin{figure}
 \centering     %%% not \center
 \subfigure[WT]{\label{fig:dchistwt}\includegraphics[width=0.49\textwidth]{wt_hist}}
@@ -76,6 +78,7 @@ Although both forms of the \gct primarily occupy collapsed and disordered confor
 \FigureCaption{Distribution of diffusion coefficients}{Frequency histograms of translational diffusion coefficient for both \gct forms. WT \gct \figref{fig:dchistwt} is closely centered around a compact conformation while the YD mutant also occupies a major collapsed state but also explored a minor extended state \figref{fig:dchistyd}. The resulting distribution of YD can be expressed as the sum of two gaussian distributions, reflecting the two-state nature of the system. \figref{fig:dclines} depicts an overlay of both \gct distributions with the predicted conformational ensemble computed by \texttt{flexiblemeccano} and shows that WT \gct remains in the collapsed region of the ensemble while YD explores more extended regions.}
 \label{fig:dchist}
 \end{figure}
+
 
 
 
@@ -151,7 +154,7 @@ In order to visualize the transitions, we generate a porcupine plot depicting th
 
 \subsection{Whole protein simulations and conserved properties of \gct}
 
-Our analysis of \gct structural properties using NMR and corresponding MDS are based on the WT and Y11D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated \gct are physically consistent when attached to the full-length \tub protein, we docked the minimum \diffusion \gct model \figref{fig:globular} onto the globular domain of an S.c. \tub homology model as an initial structure for a whole protein simulation. Due to the substantial increase in system size, simulation times were reduced to \SI{200}{\ns}.  Despite the shorter simulation time, with the Y11D \gct polypeptide, the \gct in the whole protein simulation underwent exchange between extended and compact conformations \figref{fig:globular}, suggesting both states are still accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the \SI{200}{\ns} simulation (minimal distance between any pair of residues is > 0.7 nm) \figref{fig:glob_contacts}. Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm) and maximum radius of gyration (1.582 nm) are shown in \figref{fig:globular}. This suggests that the \gct opening-closing mechanism can act independently of the rest of the protein.
+Our analysis of \gct structural properties using NMR and corresponding MDS are based on the WT and Y11D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated \gct are physically consistent when attached to the full-length \tub protein, we docked the minimum \diffusion \gct model \figref{fig:globular} onto the globular domain of an S.c. \tub homology model as an initial structure for a whole protein simulation. Due to the substantial increase in system size, simulation times were reduced to \SI{200}{\ns}.  Despite the shorter simulation time, with the Y11D \gct polypeptide, the \gct in the whole protein simulation underwent exchange between extended and compact conformations \figref{fig:globular}, suggesting both states are still accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the \SI{200}{\ns} simulation (minimal distance between any pair of residues is greater than 0.7 nm) \figref{fig:glob_contacts}. Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm) and maximum radius of gyration (1.582 nm) are shown in \figref{fig:globular}. This suggests that the \gct opening-closing mechanism can act independently of the rest of the protein.
 
 
 
