--- a/methods.tex
+++ b/methods.tex
@@ -126,6 +126,7 @@ Knowing \diffusion, we can use the Stokes-Einstein equation to obtain an express
 
 \begin{equation}
 R_h = \frac{k_{B}T}{6\pi \eta D_{t}}
+\label{eq:stokes}
 \end{equation}
 
 Where $R_h$ is the hydrodynamic radius and $\eta$ is the viscosity of the solvent.
