initial re-revision

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -5,7 +5,7 @@
 
 In this chapter we discuss the impact of phosphorylation on the global dynamics of the \tub C-terminus (\gct). We begin with the finding that the \gct has been shown to be phosphorylated {\it in vivo} ~\cite{keck2011cell}, and mimicking constitutive phosphorylation of a conserved tyrosine residue in the \gct perturbs the function of the mitotic spindle~\cite{vogel2001phosphorylation}. We hypothesize  that  transient phosphorylation at  the \gct IDR  is acting  to  regulate an as of yet unknown aspect of the function of the spindle via a structural mechanism. More specifically, we will be studying  the highly conserved tyrosine 11 (Y11) of the \gct where we study the IDR which has been identified as a key phospho-site  in this system ~\cite{vogel2001phosphorylation}. This is a first step towards describing a molecular mechanism by which regulation of the \gct promotes proper spindle function and the identification of key residues involved in binding molecular partners. 
 
-In order to understand the effect of phosphorylation at Y11, we took two approaches. First, NMR experiments which provide critical structural information; including translational diffusion coeffecients, fast motions at nsec timescales that correspond to sidechain dynamics as well as slow motions of the backbone that correspond to dispersion, and the timescale of exchange between states. Collectively, these NMR experiments are used to probe the conformational sampling  of non-phosphorylated  and  phophomimetic forms of the  \gct. These experiments revealed slow motions and exchange between two states that are only observed in the Y11D mutant.  Thus molecular dynamics simulations were employed gain deeper insight regarding the observed comformational sampling. Because phosphorylation is  a challenge to  implement  controllably  \vivo and \vitro, we approximate the electrostatic  effects of a phosphorylation by introducing an acidic residue, Aspartic  Acid (D),  at  the phosphorylation site through site directed mutagenesis. We therefore study the wild-type sequence, WT: \texttt{LLRGAAEQDSYLDDVLVDDENMVGELEEDLDADGDHKLV}, and the phospho-mutant Y11D: \texttt{LLRGAAEQDSDLDDVLVDDENMVGELEEDLDADGDHKLV} using MD simulations. By comparing results from our simulations to experimental measurements previously performed with NMR spectroscopy on the \gct, we are able to propose that local changes in charge at the 1	1 residue in the polypeptide modulate the conformational sampling of the \gct. The changes in conformational sampling we observe point to a physical mechanism for regulating the availability of binding surfaces on \tub. Furthermore, we describe a novel mode of IDP control whereby functionality arises from switch-like transitions that lie entirely within disordered states.
+In order to understand the effect of phosphorylation at Y11, we took two approaches. First, NMR experiments which provide critical structural information; including translational diffusion coeffecients, fast motions at nsec timescales that correspond to sidechain dynamics as well as slow motions of the backbone that correspond to dispersion, and the timescale of exchange between states. Collectively, these NMR experiments are used to probe the conformational sampling  of non-phosphorylated  and  phophomimetic forms of the  \gct. These experiments revealed slow motions and exchange between two states that are only observed in the Y11D mutant.  Thus molecular dynamics simulations were employed to gain deeper insight regarding the observed comformational sampling. Because phosphorylation is  a challenge to  implement  controllably  \vivo and \vitro, we approximate the electrostatic  effects of a phosphorylation by introducing an acidic residue, Aspartic  Acid (D),  at  the phosphorylation site through site directed mutagenesis. We therefore study the wild-type sequence, WT: \texttt{LLRGAAEQDSYLDDVLVDDENMVGELEEDLDADGDHKLV}, and the phospho-mutant Y11D: \texttt{LLRGAAEQDSDLDDVLVDDENMVGELEEDLDADGDHKLV} using MD simulations. By comparing results from our simulations to experimental measurements previously performed with NMR spectroscopy on the \gct, we are able to propose that local changes in charge at the 1	1 residue in the polypeptide modulate the conformational sampling of the \gct. The changes in conformational sampling we observe point to a physical mechanism for regulating the availability of binding surfaces on \tub. Furthermore, we describe a novel mode of IDP control whereby functionality arises from switch-like transitions that lie entirely within disordered states.
 
 \section{NMR}
 
@@ -20,10 +20,14 @@ Molecular Dynamics simulations (MDS) on WT and Y11D \gct were carried out using 
 
 \section{Conformational sampling of \gct}
 
+\todo{mention single peptide used}
 We computed atomic trajectories for the WT and YD forms of the \gct in all-atom MD simulations with durations of \SI{2}{\us}. We choose this simulation length because timescale of transitions observed in NMR are on the micro-millisecond order. While our nano-microsecond MD simulations do not reach such timescales due to computational limitations, long timescale motions measured in NMR have been reproduced in shorter timescale MD simulations but with faster exchange rates ~\cite{massi2004nmr, stafford2015conformational, henzler2007dynamic}. From the resulting trajectories we are able to capture dynamics and conformational sampling that are remarkably consistent with those measured in NMR.\\
 
+\todo{talk about convergence. RMSD plots. cosine content?}
 
 {\it \gct does not adopt any stable secondary structure}
+
+\todo{better quantify dssp. mention threshold, probability values}
 
 The first question we addressed was whether the structures in our MD trajectories feature the same lack of global structure that was observed in NMR. We used the \texttt{dssp} algorithm ~\cite{kabsch1983dictionary} in the VMD software package ~\cite{humphrey1996vmd} to compute secondary structure assignments on each residue in the chain. Assignments by \texttt{dssp} are based on computations of hydrogen bonding energies between all atoms. Since hydrogen bonds are the primary stabilizing interaction that gives rise to backbone secondary structure, \texttt{dssp} is able to classify geometries arising from potential hydrogen bonds to a category of secondary structure motif found in a large database of annotated structures. We apply this algorithm to every frame in the trajectories at \SI{1}{\ns} intervals to assess secondary structure motifs at every residue as a function of simulation time \figref{fig:ss}. Apart from some local helicity in the middle residues, secondary structure assignment plots for both trajectories point to a consistent absence of global secondary structure motif. The major classes of secondary structure present are turn and coil geometries which correspond to a largely unstructured ensemble of conformations. 
 
@@ -70,6 +74,8 @@ Although both forms of the \gct primarily occupy collapsed and disordered confor
 
 
 
+\afterpage{%
+\thispagestyle{empty}
 \begin{figure}
 \centering     %%% not \center
 \subfigure[WT]{\label{fig:dchistwt}\includegraphics[width=0.49\textwidth]{wt_hist}}
@@ -78,10 +84,12 @@ Although both forms of the \gct primarily occupy collapsed and disordered confor
 \FigureCaption{Distribution of diffusion coefficients}{Frequency histograms of translational diffusion coefficient for both \gct forms. WT \gct \figref{fig:dchistwt} is closely centered around a compact conformation while the YD mutant also occupies a major collapsed state but also explored a minor extended state \figref{fig:dchistyd}. The resulting distribution of YD can be expressed as the sum of two gaussian distributions, reflecting the two-state nature of the system. \figref{fig:dclines} depicts an overlay of both \gct distributions with the predicted conformational ensemble computed by \texttt{flexiblemeccano} and shows that WT \gct remains in the collapsed region of the ensemble while YD explores more extended regions.}
 \label{fig:dchist}
 \end{figure}
+\clearpage
+}
 
 
-
-
+\afterpage{%
+\thispagestyle{empty}
 \begin{figure}
 	\centering     %%% not \center
 	\subfigure[\diffusion over simulation time]{\label{fig:dctimelines}\includegraphics[height=0.35\textheight]{dc_ts}}
@@ -89,6 +97,8 @@ Although both forms of the \gct primarily occupy collapsed and disordered confor
 	\FigureCaption{Time series of  conformational sampling of \gct under Molecular Dynamics Simulations.}{ \figref{fig:dctimelines} Translational diffusion coefficients of conformations of the WT (black) and Y11D (red) \gct polypetides sampled at \SI{1}{\ns} intervals over a $2 \mu s$ MD simulation (2000 conformations per condition). Experimentally determined \diffusion are shown as a line with the associated error indicated by a shaded region on either side.  The theoretical \diffusion for a denatured 39 residue protein ~\cite{boschitsch2002fast} is indicated by the dashed blue line. The shaded green color shows 1 standard deviation of a randomly generated ensemble of structures that an unfolded WT or Y11D \gct polypeptide can have based on the amino acid-specific conformational potentials and volume exclusion. This region corresponds to partially extended conformations as seen in \figref{fig:fmdist} \figref{fig:dctimestructs} Structures taken from the simulation at \SI{500}, \SI{887} (minimum \diffusion value) and \SI{1500}{\ns} for WT and Y11D \gct polypeptides.}
 	\label{fig:dctime}
 \end{figure}
+\clearpage
+}
 
 Looking at \diffusion as a function of simulation time, we found that the diffusion coefficient (\diffusion) of the WT \gct remains relatively constant throughout the simulation, (\diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} and agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}.  Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct polypeptide is slightly lower than that of the WT \gct (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct, while disordered, is more compact than a fully denatured polypeptide chain. Interestingly, between \num{762} to \SI{1255}{\ns} in the MDS, the Y11D \gct underwent transient excursions to less compact con-formations with significantly lower diffusion coefficients (mean \diffusion= \num{1.152e-6} $\pm$ \SI{2.0325e-8}{\dcunits}). This sub-population is more extended (i.e. diffuses more slowly) than any conformation sampled by the WT \gct throughout the entire MDS. While the Y11D \gct extended states do not overlap with the conformational ensemble of the WT \gct polypeptides, they do, however, lie close to the extended conformational space for a typical random-coil poly-peptide, as modeled by \texttt{flexiblemeccano} \figref{fig:dctime}.
 
@@ -182,8 +192,11 @@ Finally, we obtain evolutionary evidence that the physical mechanism of the \gct
 
 Through NMR measurements and MD computer simulations, we demonstrate the first example of an IDP acting as a disorder-to-disorder regulatory switch, and propose a physical mechanism to explain the regulation of an essential biological machine. 
 
+\todo{mention other paper finding electrostatics in regulation}
+
 Both NMR and MD are in strong agreement that the conformational sampling of the \gct lies entirely within the diordered ensemble, as no signal of secondary structure was detected by either method. Diffusion measurements show that the major conformational state of the \gct in the WT and in the YD is collapsed, with the YD having a slightly larger hydrodynamic radius on average. However, NMR and MD simulations both provide evidence that a single point mutation to a negatively charged residue Y>D produces concerted motions along the entire polypeptide that are not present in the WT \gct. Analysis of the collective motions detected in MDS by PCA correspond closely to transitions between collapsed and extended states which leads us to hypothesize that the changes in chemical environment detected in MDS and difference in hydrodynamic radius is a product of an correlated opening and closing motion brought about by the Y>D mutation. This coordinated opening is likely brought about by the effects of electrostatic repulsion as the Asp substituion introduces further negative charge in an already acidic region. It has been previously shown that charge has a strong influence on the conformational ensemble and diffusion rates in IDPs \cite{mao2010net}. Once the \gct enters the open state, several hydrophobic residues in the middle of the polypeptide(L464, A466, G468) become accessible for protein-protein interactions.
 
+\todo{ref 42 not accurate to say it says disordered ensembles are uniform}
  Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model such behaviour as a two well potential system \figref{fig:wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the folding-on-binding paradigm ~\cite{tompa2012intrinsically}. Furthermore, this model stands in contrast to the existing view of disordered ensembles as uniform \figref{fig:wellsa} spaces of random coils ~\cite{mittag2007atomic}. And instead, we observe that the disordered landscape has some structure that IDPs can selectively explore  through PTMs to modulate functionality by giving rise to switch-like behaviour while still remaining disordered. Such behaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore play host to coordinated and functional transitions.
 
 \begin{figure}
