--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -779,3 +779,13 @@
   year={2012},
   publisher={Oxford Univ Press}
 }
+@article{sigalov2004homooligomerization,
+  title={Homooligomerization of the cytoplasmic domain of the T cell receptor $\zeta$ chain and of other proteins containing the immunoreceptor tyrosine-based activation motif},
+  author={Sigalov, Alexander and Aivazian, Dikran and Stern, Lawrence},
+  journal={Biochemistry},
+  volume={43},
+  number={7},
+  pages={2049--2061},
+  year={2004},
+  publisher={ACS Publications}
+}
