--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -13,6 +13,7 @@
 \usepackage{subfigure}
 \usepackage[labelfont=bf]{caption}
 \usepackage{amsmath}
+\usepackage{afterpage}
 
 
 
@@ -80,7 +81,7 @@
 
 
 \SetDedicationName{\MakeUppercase{Dedication}}%
-\SetDedicationText{To my grandparents; Hilda Fernandez and Porfirio Oliver. {\it Gracias por su apoyo, amor, y por ser mi inspiraci\'on en todo. Mi \'unica meta en la vida es acercarme un poco a lo que son ustedes. Los quiero mucho.}}%
+\SetDedicationText{To my grandparents; Hilda Fernandez and Porfirio Oliver. {\it Gracias por su apoyo, amor, y por ser mi inspiraci\'on en todo.  Los quiero mucho.}}%
 
 \Dedication%
 
