--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@
 Molecular  machines  are  assemblies of proteins and associated molecules that  work together  in a coordinated manner  to solve a biological problem.  These biological problems, such as coordinating chromosome segregation  during cell division, regulation of cell cycle timing, execution of protein  synthesis, etc.  encompass many processes essential to life. Given the necessity for survival in the face of ever changing environments,  evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust  manner.  A biological machine that  only functions properly under a narrow range of  conditions is less likely to support the life of a single individual or a population.  Therefore,  at the core of each of those processes are highly complex networks of proteins that  are able to assemble, communicate, coordinate,  self-regulate and self-correct in order to accomplish the necessary task reliably.  For example, the vital process of DNA replication is executed by a large multitude of proteins that  each contribute to the process of copying the genome ~\cite{bell2002dna}. The replication  machinery must first read environmental  cues for initiating  replication  at the correct time. Meanwhile, complex combinatoric  signaling networks ensure that  DNA replication  unfolds in a processive manner,  enzymatic components  perform physical work to unwind DNA strand  for copying, and others  communicate  with the DNA repair machinery  to correct copying errors and avoid harmful mutations. It is clear that  solving the biological problem of DNA replication requires the ability of participating proteins to interact  with many different partners  and mediate  many different processes.
 
 
-The structure and function of each protein is encoded in its unique sequence, or chain, of amino acids. Physical interactions between amino acids give rise to a specific 3D arrangement of the protein chain, also known as structure. The structure of each protein allows for specific interactions between  proteins  to  assemble molecular machines, recruit  necessary factors and mediate chemical reactions. See \figref{fig:tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved ~\cite{kendrew1958three}, we have learned a great deal about how 3D architecture and conformational sampling of the chains give rise to protein function. X-ray crystallography accesses atomic-scale conformations of folded protein  domains, allowing us to infer that  coordinated  motions between structural conformations is the main element of control in protein function ~\cite{hegyi1999relationship}. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein, is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca+ ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large and stable domains. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. 
+The structure and function of each protein is encoded in its unique sequence, or chain, of amino acids. Physical interactions between amino acids give rise to a specific 3D arrangement of the protein chain, also known as structure. The structure of each protein allows for specific interactions between  proteins  to  assemble molecular machines, recruit  necessary factors and mediate chemical reactions. See \figref{fig:tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved ~\cite{kendrew1958three}, we have learned a great deal about how 3D architecture and conformational sampling of the chains give rise to protein function. X-ray crystallography accesses atomic-scale conformations of folded protein  domains, allowing us to infer that  coordinated  motions between structural conformations is the main element of control in protein function ~\cite{hegyi1999relationship}. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein, is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca\textsuperscript{2+} ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large and stable domains. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. 
 
 However, as we saw with DNA replication, a single protein is often required to fulfill many functions, and interact with various different partners. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
 
@@ -36,6 +36,8 @@ A key aspect of dynamic control is the ability to modulate function in a precise
 
 {\it Disorder-Order transitions}
 
+\todo{clarify entropy-enthalpy}
+
 The best explored physical mechanism of IDP function is the fold-on binding paradigm ~\cite{wright2009linking}. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP/IDR the necessary flexibility to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP ~\cite{gianni2012folding}. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to a high entropic barrier. \footnote{Protein folding is an ordering of the protein backbone which typically implies a loss of entropy to the system and is therefore energetically disfavoursed, this is the entropic barrier; $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. However, if the folding process releases sufficient heat ($\Delta H$), the loss in entropy is overcome and the folding reaction is energetically favoured; $\Delta G < 0$. The release in heat by the folding of the protein typically increases the entropy of the surrounding water molecules thus preserving the second law of thermodynamics.}However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature \cite{radhakrishnan1997solution}. This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which is the key for controlling the interaction. \\
 
 
@@ -49,7 +51,7 @@ It is becoming increasingly evident that nature has harnessed disorder as an ada
 
 \section{IDP function in the mitotic spindle}
  
-In this section we will address the role of IDRs in controlling the function of the mitotic spindle. The mitotic spindle is a complex molecular machine composed of microtubules, force generators, chromosomes, and numerous effector molecules which act in a coordinated manner to accomplish the process of chromosome segregation during cell division ~\cite{karsenti2001mitotic}. This process ensures that genetic material is transferred from the mother to the daughter cell in a timely manner, and without errors which would in most cases result in lethality. Because cell division is a fundamental task in every cell's lifetime, mitotic spindles share common design features throughout eukaryotes ~\cite{kubai1976evolution}. The  task  of properly  arranging  and  segregating  chromosomes  is effected ultimately  by hollow \SI{25}{\nm} filaments composed of polymerized tubulin, known as microtubules,  which attach to chromosomes and exert forces to move the  DNA into mother and daughter  cells ~\cite{kline2004mitotic}.  In order to study the underlying mechanisms at play, we work with the mitotic spindle of the budding yeast {\it Saccharomyces cerevisiae} due to its minimal, yet highly conserved construction ~\cite{kubai1976evolution}. 
+In this section we will address the role of IDRs in controlling the function of the mitotic spindle. The mitotic spindle is a complex molecular machine composed of microtubules, force generators, chromosomes, and numerous effector molecules which act in a coordinated manner to accomplish the process of chromosome segregation during cell division ~\cite{karsenti2001mitotic}. This process ensures that genetic material is transferred from the mother to the daughter cell in a timely manner, and without errors which would in most cases result in fatality. Because cell division is a fundamental task in every cell's lifetime, mitotic spindles share common design features throughout eukaryotes ~\cite{kubai1976evolution}. The  task  of properly  arranging  and  segregating  chromosomes  is effected ultimately  by hollow \SI{25}{\nm} filaments composed of polymerized tubulin, known as microtubules,  which attach to chromosomes and exert forces to move the  DNA into mother and daughter  cells ~\cite{kline2004mitotic}.  In order to study the underlying mechanisms at play, we work with the mitotic spindle of the budding yeast {\it Saccharomyces cerevisiae} due to its minimal, yet highly conserved construction ~\cite{kubai1976evolution}. 
 
 \subsection{Microtubules}
 
